# py-machine

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  README.rst  debug.py  license.txt  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  test.py  tox.ini
.github/workflows/: python-publish.yml  test-project.yml
Python_Machine/: Cell.py  CellMachine.py  base74.py
Python_Machine/tests/: test_cellmachine.py
cellmachine/: Cell.py  CellMachine.py  Enums.py  Utils.py
cellmachine/textures/: CodePreviewer.py
cython/: level_save.pyx
src/Python_Machine/: Cell.py  CellMachine.py  Enums.py  Grid.py  Utils.py  __init__.py  base74.py  level_save_gen_str.py
tests/: test_base74.py  test_cellmachine.py  test_utils.py
