[tool.poetry]
name = "python-machine"
version = "1.0.3"
description = "A python package that allows you to run cell machine"
authors = ["youtissoum <youtissoum@outlook.fr>"]
license = "Apache"
readme = "README.md"
packages = [{include = "Python_Machine"}]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
