[metadata]
name = Python_Machine
description = a Package that allows you to simulate cell machine in python
long_description = file: README.md
long_description_content_type = text/markdown
author = youtissoum
version = 1.0.4
license = Apache
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = 
    Python_Machine
install_requires =
    Pillow==9.2.0
python_requires = >= 3.8
package_dir =
    =src
zip_safe = no
include_package_data = True

[options.extras_require]
testing=
    pytest>=7.0
    pytest-cov>=3.0
    mypy>=0.971
    flake8>=5.0
    tox>=3.26
cython_compile=
    Cython>=0.29.32

[options.package_data]
Python_Machine = py.typed

[flake8]
max-line-length = 160